# varwg-doc

./: .gitignore  README.md  README.rst  pyproject.toml
docs/: Makefile  index.rst  make.bat  requirements.txt
docs/source/: conf.py  index.rst  meteo.meteox2y.rst  modules.rst  reference.rst  smoothing.rst  times.rst  varwg.core.rst  varwg.meteo.rst  varwg.rst  varwg.time_series_analysis.rst  vg.core.rst  vg.rst
docs/source/tutorial/: configuration.rst  howto.rst  index.rst
src/varwg_doc/: __init__.py
